--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "shredly-starter-a",
+  "name": "shredly-starter-a-auth",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "set-admin": "node scripts/setAdminClaim.mjs"
   },
   "dependencies": {
+    "firebase": "^10.12.5",
     "pinia": "^2.2.6",
     "vue": "^3.4.38"
   },
   "devDependencies": {
-    "vite": "^5.4.2",
-    "@vitejs/plugin-vue": "^5.1.2"
+    "@vitejs/plugin-vue": "^5.1.2",
+    "firebase-admin": "^12.6.0",
+    "vite": "^5.4.2"
   }
 }
