--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "firebase": "^10.12.5",
+    "maplibre-gl": "^4.3.2",
     "pinia": "^2.2.6",
     "vue": "^3.4.38",
-    "vue-router": "^4.4.5",
-    "maplibre-gl": "^4.3.2"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
