--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.32",
     "@vitejs/plugin-vue": "^5.1.2",
     "firebase-admin": "^12.6.0",
+    "unplugin-icons": "^22.2.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^5.4.2"
   }
 }
